<resources>
    <string name="app_name">WWWJDIC for Android</string>
    <string name="app_name_short">WWWJDIC</string>
    <string name="translationError">Error</string>
    <string-array name="dictionary_codes_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>E</item>
        <item>Q</item>
        <item>F</item>
    </string-array>
    <string-array name="dictionary_idxs_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="dictionaries_array">
        <item>General</item>
        <item>Japanese Names</item>
        <item>Computing/Telecomm</item>
        <item>Life Sciences/Bio-Med</item>
        <item>Legal Terms</item>
        <item>Finance/Marketing</item>
        <item>Buddhism</item>
        <item>Miscellaneous</item>
        <item>Engineering/Science</item>
        <item>Linguistics</item>
        <item>River &amp; Water Systems</item>
        <item>Automobile Industry</item>
        <item>Japanese-German</item>
        <item>Japanese-French</item>
        <item>Japanese-Russian</item>
        <item>Japanese-Swedish</item>
        <item>Japanese-Hungarian</item>
        <item>Japanese-Spanish</item>
        <item>Japanese-Dutch</item>
        <item>Japanese-Slovenian</item>
        <item>Japanese-Italian</item>
        <item>Japanese Wordnet</item>
        <item>Combined Jpn-Eng</item>
        <item>Work-in-progress</item>
    </string-array>
    <string-array name="kanji_search_codes_array">
        <item>J</item>
        <item>C</item>
        <item>B</item>
        <item>E</item>
        <item>U</item>
        <item>J</item>
        <item>P</item>
        <item>Y</item>
        <item>W</item>
    </string-array>
    <string-array name="kanji_search_types_array">
        <item>Kanji or reading</item>
        <item>Stroke count</item>
        <item>Radical number</item>
        <item>English meaning</item>
        <item>Unicode code (hex)</item>
        <item>JIS code (hex)</item>
        <item>SKIP code</item>
        <item>Pinyin reading</item>
        <item>Korean reading</item>
    </string-array>
    <string name="about_text">WWWJDIC for Android</string>
    <string name="about_by">&#169; 2010 Nikolay Elenkov</string>
    <string name="about_bugtracking">More info/issue reporting</string>
    <string name="bugtracker_url">https://github.com/nelenkov/wwwjdic</string>
    <string name="uses_wwwjdic">Uses Jim Breen\'s <a href="http://wwwjdic.net">WWWJDIC</a></string>
    <string name="uses_weocr">Uses <a href="http://weocr.ocrgrid.org">WeOCR</a></string>
    <string name="select_dictionary">Select dictionary:</string>
    <string name="stroke_count">Stroke count:  </string>
    <string name="radical_number">Radical number: </string>
    <string name="english_meanings">English meanings</string>
    <string name="radical_strokes">Radical/strokes</string>
    <string name="codes_more">Codes and more</string>
    <string name="translation">Translation(s)</string>
    <string name="select_search_type">Select search type:</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="jis_code">JIS code: </string>
    <string name="sjis_code">SJIS code: </string>
    <string name="unicode_number">Unicode number: </string>
    <string name="classical_radical">Classical radical number: </string>
    <string name="freq_rank">Frequency rank: </string>
    <string name="grade">Grade: </string>
    <string name="jlpt_level">JLPT level: </string>
    <string name="jlpt_level_label">JLPT level: </string>
    <string name="skip_code">SKIP code: </string>
    <string name="korean_reading">Korean reading: </string>
    <string name="pinyn">Pinyin: </string>
    <string name="more">More...</string>
    <string name="dictionary_label">Dictionary:</string>
    <string name="dictionary">Dictionary</string>
    <string name="kanji_lookup">Kanji Lookup</string>
    <string name="about">About</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="strokes">Strokes: </string>
    <string name="select">Select...</string>
    <string name="radical">Radical: </string>
    <string name="timeout_error_message">Connection has timed out. Check your network
  connection. If the problem persists, try setting a different WWWJDIC mirror in Settings.</string>
    <string name="socket_error_message">Failed to connect to WWWJDIC. Check your network  connection. If the problem persists, try setting a different WWWJDIC mirror in Settings.</string>
    <string name="generic_error_message">An unexpected error has occurred. Try setting a different WWWJDIC mirror in Settings. If that doesn\'t help, please report
 this (see About).</string>
    <string name="ocr_hint1">* Align text to guide lines (approx. is OK),
  then press center button/tap screen to capture.</string>
    <string name="ocr_hint2">* Crop a rectangular area (single line) on the
  next screen and press \'Save\' to OCR.</string>
    <string name="ocr_hint3">* Press あ/漢/文 to send text to dictionary screen.</string>
    <string name="pref_ocr">OCR settings</string>
    <string name="pref_weocr_server">WeOCR server</string>
    <string name="pref_weocr_server_summary">Don\'t use the backup server if the main one  is online</string>
    <string-array name="weocr_mirror_names">
        <item>maggie (main)</item>
        <item>jimbocho (backup)</item>
    </string-array>
    <string-array name="weocr_mirror_urls">
        <item>http://maggie.ocrgrid.org/cgi-bin/weocr/nhocr.cgi</item>
        <item>http://jimbocho.ocrgrid.org/cgi-bin/weocr/nhocr.cgi</item>
    </string-array>
    <string name="pref_weocr_timeout">WeOCR timeout</string>
    <string name="pref_timeout_summary">[seconds]</string>
    <string name="pref_wwwjdic">WWWJDIC settings</string>
    <string name="pref_wwwjdic_mirror">WWWJDIC mirror</string>
    <string-array name="wwwjdic_mirror_names">
        
        <item>Germany [wwwjdic.biz]</item>
        <item>Sweden  [wwwjdic.se]</item>
        <item>USA     [www.edrdg.org]</item>
    </string-array>
    <string name="pref_wwwjdic_timeout">WWWJDIC timeout</string>
    <string name="pref_ocr_dump_cropped_images">Dump cropped images</string>
    <string name="pref_ocr_dump_cropped_images_summary">Dump to /sdcard/wwwjdic (for debugging)</string>
    <string name="pref_kr">Kanji recognizer settings</string>
    <string name="pref_kr_url">Kanji recognizer URL</string>
    <string name="pref_kr_timeout">Kanji recognizer timeout</string>
    <string name="pref_kr_use_kanji_recognizer">Use Kanji Recognizer</string>
    <string name="pref_kr_use_kanji_recognizer_summary">Use the Kanji Recognizer app for handwriting
 recognition.</string>
    <string name="pref_kr_annotate">Annotate strokes</string>
    <string name="pref_kr_annotate_midway">Annotate midway</string>
    <string name="pref_kr_annotate_midway_summary">When checked, stroke numbers are shown near the
  middle of strokes. Otherwise, near the start.</string>
    <string name="pref_sod">Stroke order diagrams settings</string>
    <string name="pref_sod_server_timeout">SOD server timeout</string>
    <string name="pref_sod_animation_delay">Stroke animation delay</string>
    <string name="pref_sod_animation_delay_summary">[milliseconds]</string>
    <string name="stroke_order">Stroke order</string>
    <string name="look_up">Look up</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="uses_kanjivg">Uses <a href="http://kanjivg.tagaini.net">KanjiVG data</a>, (C) 2009/2010 Ulrich Apel</string>
    <string name="enter_eng_or_jap">Enter English or Japanese</string>
    <string name="look_up_all_kanji">Look up all kanji</string>
    <string name="copy_jp">Copy Japanese</string>
    <string name="copy_eng">Copy English</string>
    <string name="common_words">Common\nwords</string>
    <string name="exact_match_nl">Exact\nmatch</string>
    <string name="romanized_jap">Romanized\nJapanese</string>
    <string name="pref_ocr_direct_search">Direct search</string>
    <string name="pref_ocr_direct_search_summary">When checked OCR-ed text is not sent to
 dictionary screen for editing before search.</string>
    <string name="pref_default_dict">Default dictionary</string>
    <string name="donate_version">Donate version</string>
    <string name="pref_auto_select_mirror">Mirror auto select</string>
    <string name="pref_auto_select_mirror_summary">Automatically select closest WWWJDIC mirror.</string>
    <string name="compounds">Compounds</string>
    <string name="pref_export">Export</string>
    <string name="pref_export_meanings_separator_char">Meanings separtor char</string>
    <string name="pref_export_meanings_separator_char_summary">Character to separate mutiple meanings with when
  exporting to CSV/Anki.</string>
    <string name="faq_link"><a href="http://nelenkov.blogspot.com/p/wwwjdic-for-android-faq.html">FAQ</a></string>
    <string name="kradfile_attribution">Includes data from the <a href="http://www.kanjicafe.com/kradfile_license.htm#download">KRADFILE - Unicode file</a>        . The file is (C) 2001, 2007, 2009 by Michael Raine, Jim Breen,
        The EDR&amp;D Group at Monash University, Jim Rose, The
        KanjiCafe.com, and is used in conformance with its <a href="http://www.kanjicafe.com/kradfile_license.htm">license</a></string>
    <string name="abs_attribution">Uses <a href="http://actionbarsherlock.com">ActionBarSherlock</a> by Jake Wharton</string>
    <string name="acra_attribution">Uses <a href="http://acra.ch">ACRA</a> by Emmanuel Astier &amp; Kevin Gaudin</string>
    <string name="opencsv_attribution">Uses <a href="http://opencsv.sourceforge.net">OpenCSV</a> by Glen Smith, Sean Sullivan, Scott Conway</string>
    <string name="lookup_kanji">Lookup kanji</string>
    <string name="examples">Examples</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="pref_disable_acra">Automatic error reports</string>
    <string name="pref_acra_disabled">Reporting disabled</string>
    <string name="pref_acra_enabled">Reporting enabled</string>
    <string name="pref_maintenance">App maintenance</string>
    <string name="pref_random_examples">Random examples</string>
    <string name="pref_random_examples_summary">When checked will return 10 random example sentences on each search.</string>
    <string name="pref_other">Other</string>
    <string name="pref_other_summary">App maintenance, error reporting</string>
    <string name="read_out">Read out</string>
    <string name="pref_jp_tts_engine">Japanese TTS Engine</string>
    <string name="share">Share</string>
    <string name="create_flashcard">Create flashcard</string>
    <string name="pref_widget">Widget settings</string>
    <string name="credits">Credits</string>
</resources>