<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_sod">
        <EditTextPreference
            android:inputType="numberDecimal"
            android:maxLength="4"
            app:defaultValue="30"
            app:iconSpaceReserved="false"
            app:key="pref_sod_server_timeout"
            app:singleLine="true"
            app:summary="@string/pref_timeout_summary"
            app:title="@string/pref_sod_server_timeout" />
        <EditTextPreference
            android:inputType="numberDecimal"
            android:maxLength="4"
            app:defaultValue="50"
            app:iconSpaceReserved="false"
            app:key="pref_sod_animation_delay"
            app:singleLine="true"
            app:summary="@string/pref_sod_animation_delay_summary"
            app:title="@string/pref_sod_animation_delay" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_export">
        <ListPreference
            app:defaultValue="\n"
            app:entries="@array/export_meanings_separator_char_names"
            app:entryValues="@array/export_meanings_separator_chars"
            app:iconSpaceReserved="false"
            app:key="pref_export_meanings_separator_char"
            app:summary="@string/pref_export_meanings_separator_char_summary"
            app:title="@string/pref_export_meanings_separator_char" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_maintenance">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="acra.enable"
            app:summaryOff="@string/pref_acra_disabled"
            app:summaryOn="@string/pref_acra_enabled"
            app:title="@string/pref_disable_acra" />
    </PreferenceCategory>
</PreferenceScreen>
