<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory android:title="@string/pref_kr">
        <CheckBoxPreference android:key="pref_kr_use_kanji_recognizer"
            android:title="@string/pref_kr_use_kanji_recognizer"
            android:summary="@string/pref_kr_use_kanji_recognizer_summary"
            android:defaultValue="false" android:disableDependentsState="true" />
        <EditTextPreference android:title="@string/pref_kr_url"
            android:key="pref_kr_url" android:defaultValue="http://kanji.sljfaq.org/kanji-0.016.cgi"
            android:singleLine="true" android:inputType="numberDecimal"
            android:dependency="pref_kr_use_kanji_recognizer" />
        <EditTextPreference android:key="pref_kr_timeout"
            android:title="@string/pref_kr_timeout" android:summary="@string/pref_timeout_summary"
            android:singleLine="true" android:inputType="numberDecimal"
            android:defaultValue="10" android:maxLength="4"
            android:dependency="pref_kr_use_kanji_recognizer" />
        <CheckBoxPreference android:key="pref_kr_annotate"
            android:title="@string/pref_kr_annotate"
            android:defaultValue="true" android:disableDependentsState="false" />
        <CheckBoxPreference android:key="pref_kr_annotate_midway"
            android:title="@string/pref_kr_annotate_midway"
            android:summary="@string/pref_kr_annotate_midway_summary"
            android:defaultValue="false" android:dependency="pref_kr_annotate" />
    </PreferenceCategory>  
</PreferenceScreen>
