<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_ocr">
        <ListPreference
            app:defaultValue="http://maggie.ocrgrid.org/cgi-bin/weocr/nhocr.cgi"
            app:entries="@array/weocr_mirror_names"
            app:entryValues="@array/weocr_mirror_urls"
            app:key="pref_weocr_url"
            android:lines="1"
            app:summary="@string/pref_weocr_server_summary"
            app:title="@string/pref_weocr_server"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:defaultValue="10"
            android:inputType="numberDecimal"
            app:key="pref_weocr_timeout"
            android:maxLength="4"
            app:singleLine="true"
            app:summary="@string/pref_timeout_summary"
            app:title="@string/pref_weocr_timeout"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_ocr_direct_search"
            app:summary="@string/pref_ocr_direct_search_summary"
            app:title="@string/pref_ocr_direct_search"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_ocr_dump_cropped_images"
            app:summary="@string/pref_ocr_dump_cropped_images_summary"
            app:title="@string/pref_ocr_dump_cropped_images"
            app:iconSpaceReserved="false"/>
        <!--
            <CheckBoxPreference
            android:key="pref_ocr_use_internal_storage"
            android:title="Use internal storage" android:summary="Uses
            /emmc instead of /sdcard" android:defaultValue="false" />
        -->
    </PreferenceCategory>
</PreferenceScreen>
