<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
	<header android:fragment="org.nick.wwwjdic.WwwjdicPrefsFragment"
		android:title="@string/pref_wwwjdic"> 
	</header>
	<header android:fragment="org.nick.wwwjdic.GenericPrefsFragment"
		android:title="@string/pref_ocr"> 
		<extra android:name="resource" 
		       android:value="ocr_prefs" />
	</header>
	<header android:fragment="org.nick.wwwjdic.KrPrefsFragment"
        android:title="@string/pref_kr">
        <extra android:name="resource" 
               android:value="kr_prefs" />
    </header>
    <header android:fragment="org.nick.wwwjdic.GenericPrefsFragment"
        android:title="@string/pref_other" 
        android:summary="@string/pref_other_summary">
        <extra android:name="resource" 
               android:value="misc_prefs" />
    </header>
</preference-headers>
