<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_context_kanji_list_copy"
        android:icon="@drawable/ic_menu_copy"
        android:orderInCategory="0"
        app:showAsAction="always|withText"
        android:title="@string/copy" />
    <item
        android:id="@+id/menu_context_kanji_list_favorite"
        android:icon="@drawable/ic_menu_star"
        android:orderInCategory="1"
        app:showAsAction="always|withText"
        android:title="@string/add_to_favorites" />
    <item
        android:id="@+id/menu_context_kanji_list_stroke_order"
        android:icon="@drawable/ic_menu_edit"
        android:orderInCategory="2"
        app:showAsAction="always|withText"
        android:title="@string/stroke_order" />
    <item
        android:id="@+id/menu_context_kanji_list_compounds"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="3"
        app:showAsAction="always|withText"
        android:title="@string/compounds" />
</menu>
