<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_context_history_lookup"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="0"
        app:showAsAction="ifRoom|withText"
        android:title="@string/look_up" />
    <item
        android:id="@+id/menu_context_history_copy"
        android:icon="@drawable/ic_menu_copy"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"
        android:title="@string/copy" />
    <item
        android:id="@+id/menu_context_history_delete"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete" />
</menu>
